----- cvs ci ------
Sun Dec 17 10:11:28 NOVT 2000
max (patch from Alex Bronin):
* fix crash if no desc in tic again

----- cvs ci ------
Tue Dec 12 22:43:26 NOVT 2000
max (patch from Alex Bronin):
* ignore bsy flag for SeparateBundles while htick clean

----- cvs ci ------
Sat Dec  9 13:52:05 NOVT 2000
max (patch from Alex Bronin):
* yet another fix crash if no desc in tic

----- cvs ci ------
Tue Nov 28 11:31:37 NOVT 2000
max (patch from Alex Bronin):
* fix crash if no desc in tic

----- cvs ci ------
Fri Nov 17 15:25:44 NOVT 2000
max:
* don't core dump with long desriptions in hatch (static buffers must die)

----- cvs ci ------
Tue Oct 17 14:02:44 NOVST 2000
max:
* don't core dump while write msg to sysop 

----- cvs ci ------
Tue Sep 19 20:20:08 NOVST 2000
max:
* select "right" link (useAka==ourAka) for filearea when toss .tic files

----- cvs ci ------
Mon Aug 28 11:05:15 UTC 2000
sms:
* fix for From-address-change

----- cvs ci ------
Sun Aug 27 01:03:03 UTC 2000
sms:
* setting group of autocreated areas to LinkGrp of creating node (if set)

----- cvs ci ------
Sun Aug 27 00:42:24 UTC 2000
sms:
* using ourAka from link definition as From-address in TIC instead of address
  from area definition (needed for host and hub systems)

----- cvs ci ------
Tue Aug 15 17:49:51 GMT 2000
sms:
* fixed segfault in autoCreate


htick 0.9
---------
(released on Mon May 22 14:58:56 CEST 2000)

Sun Aug 13 10:00:00 SAMST 2000
Georgi (patch from Alex Bronin, 2:5049/36):
* fixed sendorig bug

Thu Aug 10 13:19:13 MSD 2000
max (patch from Serguei Revtov):
* simple MSGID generation fix
* small change in sun/makefile

Tue Jul 25 22:09:07 NOVST 2000
max (patch from Pavel Gulchouk):
* module=htick
* filefix changes

Tue Jul 11 21:05:00 SAMST 2000
Georgi:
* remove description for file[s] (field 'replace' in TIC)

Mon Jun 19 23:45:48 SAMST 2000
Georgi:
* fixed some bugs in toss and hatch

----- cvs ci ------
Mon Jun 05 12:23:00 SAMST 2000
Georgi:
* fixed bug in remove file[s]